<resources>
    <string name="app_name">EasyQ</string>
    <string name="signOut">Sign Out</string>
    <string name="item1">Government Offices</string>
    <string name="item2">Ration Shops</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoia3VuYWxtbm5pdCIsImEiOiJja2Z5eHByM3IxeXRkMnd0ODNyeGFmYjJiIn0.jPhL4e24Cd0BDPczLi2hjg</string>
    <string name="user_location_permission_not_granted">User location Permission is not granted</string>
    <string name="user_location_permission_explanation">Explanantion</string>
    <string name="office1">Rajasthani Rajya Sarkari Vibhag</string>
    <string name="office2">Office of Assistant Commissioner</string>
    <string name="office3">JVVNL Office</string>
    <string name="office4">Chhapar House</string>
    <string name="office5">Emitra Office</string>
    <string name="office6">Local Self Government Department</string>
    <string name="office7">Collectorate</string>
    <string name="shop1">Government Ration Shop,jhotwara</string>
    <string name="shop2">Government Ration Shop,banipark</string>
    <string name="shop3">Government Ration Shop,Vaishali Nagar</string>
    <string name="shop4">Government Ration Shop,Niwaru</string>
    <string name="place">place</string>
    <string name="book_slot">Book Slot</string>
    <string name="date">pick date</string>
    <string name="time">pick time</string>
    <string name="book">Book</string>
    <string name="change_language">change language</string>
    <string name="openNavDrawer" translatable="false">Navigation Drawer Open</string>
    <string name="closeNavDrawer" translatable="false">Navigation Drawer Close</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="upload_your_bpl_card">Upload your BPL Card:</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
</resources>