<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.BookAppointment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:title="@string/book_slot"
            />
    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:background="@drawable/shape_background">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_weight="20"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_timer"
                app:iconSize="20dp"
                app:iconGravity="textEnd"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="20dp">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textSize="25sp"
                    android:layout_weight="20"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_timer"
                    app:iconSize="20dp"
                    app:iconGravity="textEnd"
                    />
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>
        </LinearLayout>
</RelativeLayout>